...
        }}
      />
      <Tabs.Screen
        name="stats"
        options={{
          title: t("tab.stats"),
          tabBarButtonTestID: "tab-stats",
          tabBarIcon: icon("activity"),
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
...
